# Chat-with-AudioBooks

./: .env  pyproject.toml
audio_vectorize/: Model__Embedding_HuggingFace.py  Model__FileManagement_PostgressSQL.py  Model__SpeechToText_Google.py  Model__Speech_Recognition.py  Model__VectorDatabase_MongoDBAtlas.py  main.py
